<resources>
    <string name="app_name">Photo Up</string>
    <string name="title_activity_preferences">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="action_create_qr">Create QR Code</string>
    <string name="server_settings_qr">Server QR Code</string>
    <string name="username_category_title">Name</string>
    <string name="username_title">Name</string>
    <string name="username_preference_summary">Names to be associated with your photos</string>
    <string name="username_preference_dialog_title">Nome</string>
    <string name="instant_upload_category_title">Automatic Upload</string>
    <string name="instant_upload_title">Automatically upload photos in the background</string>
    <string name="instant_upload_preference_summary">Sends all the new photos automatically in the background</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="value">Value</string>
    <string name="send_photos">Send Photos</string>
    <string name="title_activity_send_photos">SendPhotos</string>
    <string name="uploading">Uploading</string>
    <string name="upload_success">Upload completed successfully</string>
    <string name="upload_error">Error while uploading</string>
    <string name="instant_upload_on_wifi">Automatic Upload on Wifi Only</string>
    <string name="error_loading_server">Error loading server!</string>
    <string name="error_reading_qr">Error reading QR Code!</string>
    <string name="confirm_delete_server">Delete server?</string>
    <string name="confirm_delete_header">Delete header?</string>
    <string name="confirm_delete_parameter">Delete parameter?</string>
    <string name="headers">Headers</string>
    <string name="header">Header</string>
    <string name="parameters">Parameters</string>
    <string name="parameter">Parameter</string>
    <string name="no_server_configured">No servers found.</string>
    <string name="add_new_server">Add new server?</string>
    <string name="settings_title">Settings</string>
    <string name="settings_server_list">Manage Servers</string>
    <string name="settings_header_list">Manage Headers</string>
    <string name="settings_parameter_list">Manage Parameters</string>
    <string name="settings_add_server">Add Server</string>
    <string name="settings_edit_server">Edit Server</string>
    <string name="prefs_category_servers">Servers</string>
    <string name="prefs_manage_servers">Manage Servers</string>
    <string name="prefs_servers_summary">Add, remove or edit servers configurations</string>
    <string name="prefs_add_server">Add server</string>
    <string name="prefs_add_server_summary">Add server to upload photos</string>
    <string name="prefs_add_header">Add Header</string>
    <string name="prefs_edit_header">Edit Header</string>
    <string name="prefs_add_header_summary">Add Header that will be sent in the request</string>
    <string name="prefs_add_parameter">Add Parameter</string>
    <string name="prefs_edit_parameter">Edit Parameter</string>
    <string name="prefs_add_parameter_summary">Add Parameter that will be sent in the request</string>
    <string name="prefs_category_security">Security</string>
    <string name="prefs_pincode">App PIN</string>
    <string name="prefs_pincode_summary">Protect your client</string>
    <string name="prefs_category_instant_uploading">Instant Uploads</string>
    <string name="prefs_instant_upload">Instant picture uploads</string>
    <string name="prefs_instant_upload_summary">Instantly upload pictures taken by camera</string>
    <string name="prefs_recommend">Recommend to a friend</string>
    <string name="prefs_category_more">More</string>
    <string name="about_title">About</string>
    <string name="server_saved">Server data saved!</string>
    <string name="qr_saved">Server QR Code saved!</string>
    <string name="error_saving_qr">Error saving server QR Code!</string>
    <string name="choose">Choose</string>
    <string-array name="addServerModes">
        <item>Read QR Code</item>
        <item >Insert Manually</item>
    </string-array>
    <string name="prefs_category_server">Server</string>
    <string name="prefs_url">URL</string>
    <string name="prefs_url_summary">Server side script URL, that will handle the upload.</string>
    <string name="prefs_http_method">HTTP method</string>
    <string name="prefs_http_method_post">POST</string>
    <string name="prefs_http_method_summary">HTTP method to use</string>
    <string name="prefs_file_parameter_name">File parameter name</string>
    <string name="prefs_file_parameter_name_summary">Form parameter that will contain file\'s data</string>
    <string name="prefs_category_headers">Headers</string>
    <string name="prefs_manage_headers">Manage Headers</string>
    <string name="prefs_headers_summary">Add, remove or edit Headers to the request</string>
    <string name="prefs_category_parameters">Parameters</string>
    <string name="prefs_manage_parameters">Manage Parameters</string>
    <string name="prefs_parameters_summary">Add, remove or edit Parameters to the request</string>
    <string-array name="pref_httpModes">
        <item>POST</item>
        <item>GET</item>
    </string-array>
    <string-array name="tabLabels">
        <item>Upload</item>
        <item >History</item>
    </string-array>
</resources>