<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="servers_category"
        android:title="@string/prefs_category_servers">
        <Preference
            android:id="@+id/manage_servers"
            android:key="manage_servers"
            android:summary="@string/prefs_servers_summary"
            android:title="@string/prefs_manage_servers" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/prefs_category_security">
        <EditTextPreference
            android:key="set_pincode"
            android:summary="@string/prefs_pincode_summary"
            android:title="@string/prefs_pincode"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/prefs_category_instant_uploading">
        <CheckBoxPreference
            android:key="instant_uploading"
            android:summary="@string/prefs_instant_upload_summary"
            android:title="@string/prefs_instant_upload" />
        <CheckBoxPreference
            android:dependency="instant_uploading"
            android:disableDependentsState="true"
            android:key="instant_upload_on_wifi"
            android:title="@string/instant_upload_on_wifi" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="more"
        android:title="@string/prefs_category_more">
        <Preference
            android:key="recommend"
            android:title="@string/prefs_recommend" />
        <Preference
            android:id="@+id/about_app"
            android:key="about_app"
            android:title="@string/about_title" />
    </PreferenceCategory>


</PreferenceScreen>



















